<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <!--<item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="200" app:showAsAction="never" /> -->
    <item android:id="@+id/action_intro" android:title="@string/title_activity_intro"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_language_change" android:title="@string/alternate_language"
        android:orderInCategory="200" app:showAsAction="never" />
  <!--  <item android:id="@+id/action_settings" android:title="@string/settings"
        android:orderInCategory="300" app:showAsAction="never" /> -->
    <item android:id="@+id/action_changepassword" android:title="@string/changepassword"
        android:orderInCategory="400" app:showAsAction="never" />
    <item android:id="@+id/action_logout" android:title="@string/logout"
        android:orderInCategory="500" app:showAsAction="never" />

</menu>
