<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_register"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></FrameLayout>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:id="@+id/relative"
            android:background="@drawable/layout_round_colour"

            >


            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/reminders"
                android:textSize="35dp"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:singleLine="true"
                android:textColor="@color/lbl_welcome" />


            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:gravity="left"

                android:layout_marginTop="60dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:id="@+id/remindersRadio"
                android:checkedButton="@+id/enableReminderButton" >

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enable"
                    android:textSize="30dp"
                    android:textColor="@color/lbl_welcome"
                    android:id="@+id/enableReminderButton"
                    android:buttonTint="#ea4c88"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/disable"
                    android:textSize="30dp"
                    android:textColor="@color/lbl_welcome"
                    android:id="@+id/disbaleReminderButton"
                    android:buttonTint="#ea4c88"/>

            </RadioGroup>



        </RelativeLayout>


        <!-- confirm reminder settigns -->

        <Button
            android:id="@+id/confirmSettings"
            android:background="@drawable/layout_round_pink"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/confirm"
            android:textSize="30dp"
            android:textColor="@color/white" />

        <!-- Link to MainActivity Screen -->

        <!-- SCOTTY B she's all yours Change Password Button -->

        <Button
            android:id="@+id/changePasswordButton"
            android:background="@color/pink_neon"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:text="@string/changepassword"
            android:textSize="30dp"
            android:textColor="@color/white" />

        <!-- Link to MainActivity Screen -->










    </LinearLayout>

</LinearLayout>


