<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_register"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></FrameLayout>



        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/dob"
            android:textSize="30dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:singleLine="true"
            android:textColor="@color/lbl_welcome" />

        <EditText
            android:id="@+id/dob"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/input_register_bg"
            android:padding="10dp"
            android:singleLine="true"
            android:textSize="40dp"
            android:inputType="textCapWords"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint"
            android:textCursorDrawable="@null"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textSize="30dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:singleLine="true"
            android:textColor="@color/lbl_welcome" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/genderRadio">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Male"
                android:textSize="30dp"
                android:textColor="@color/lbl_welcome"
                android:id="@+id/maleButton"
                android:buttonTint="#ea4c88"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Female"
                android:textSize="30dp"
                android:textColor="@color/lbl_welcome"
                android:id="@+id/femaleButton"
                android:buttonTint="#ea4c88"/>
        </RadioGroup>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/country"
            android:textSize="30dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:singleLine="true"
            android:textColor="@color/white" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/country_array"
            android:prompt="@string/select"
            android:spinnerMode="dropdown"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/white" />


        <!-- Login Button -->

        <Button
            android:id="@+id/button_next3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="#ea4c88"
            android:text="@string/t_and_c"
            android:textSize="20dp"
            android:textColor="@color/white" />

        <!-- Link to Login Screen -->


    </LinearLayout>

</LinearLayout>
