<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_register"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></FrameLayout>


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/newpassword"
            android:textSize="30dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:singleLine="true"
            android:textColor="@color/lbl_welcome" />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/input_register_bg"
            android:textSize="40dp"
            android:padding="10dp"
            android:singleLine="true"
            android:inputType="textPassword"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint"
            android:textCursorDrawable="@null"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"
            android:textSize="30dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:singleLine="true"
            android:textColor="@color/lbl_welcome" />

        <EditText
            android:id="@+id/confirmpassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/input_register_bg"
            android:textSize="40dp"
            android:padding="10dp"
            android:singleLine="true"
            android:inputType="textPassword"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint"
            android:textCursorDrawable="@null"/>


        <!-- Login Button -->

        <Button
            android:id="@+id/confirmChangePassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="#ea4c88"
            android:text="@string/confirm"
            android:textSize="30dp"
            android:textColor="@color/white" />

        <!-- Link to Login Screen -->


    </LinearLayout>

</LinearLayout>


